# Rocket_front

./: .dockerignore  .gitignore  Cargo.toml  Notes.txt  development.Dockerfile  release.Dockerfile
src/: auth.rs  catchers.rs  common.rs  errors.rs  jsonapi.rs  login.rs  logout.rs  main.rs  models.rs  post.rs  requests.rs  session.rs  tag.rs  tera_custom.rs  user.rs
templates/: base.html.tera  edit_post.html.tera  login.html.tera  post.html.tera  tags.html.tera  update_pw.html.tera  user.html.tera
templates/admin/: edit_post.html.tera  list_of_users.html.tera  new_post.html.tera
templates/error/: 401.html.tera  404.html.tera  500.html.tera  bad_backend_response.html.tera  default.html.tera
