[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"

rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11.11", features = ["json", "cookies"] }