[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
tera = {version = "1.19.0", features = ["builtins"] }
chrono = {version = "0.4.20", features = ["serde"] }
thiserror = {version = "1.0.40"}
url = {version = "2.4.0" }

rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
reqwest = { version = "0.11.11", features = ["json", "cookies"] }